Set a max-width on .App in App.css. Fixed alignment of code in App.js

--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  max-width:  1000px;
 }
 
 .App-logo {
@@ -34,3 +35,5 @@
   margin-bottom: 10px;
   margin-top: 10px;
 }
+
+
